# matrix-wip-bot

./: Cargo.toml  Dockerfile  README.md  compose.yml  example-config.yaml
src/: bridge.rs  command.rs  image_generator.rs  main.rs  users.rs
src/command/: spam.rs
