[package]
name = "matrix-wip-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
config = "0.15.15"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
magick_rust = "1.1.0"
matrix-sdk = { version = "0.14.0", features = ["markdown"] }
mime = "0.3.17"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
url = "2.5.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ruma_unstable_exhaustive_types)'] }
